--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                <p class="card-text">
                 <ul>
                     <li>Edad: 32 años</li>
-                    <li>fecha de nacimiento: 13/12/1990</li>
+                    <li>Fecha de nacimiento: 13/12/1990</li>
                     <li>Nacionalidad: Argentino</li>
-                    <li>Recidencia: vicuña mackenna - cordoba</li>
+                    <li>Recidencia: Vicuña Mackenna - Córdoba</li>
                 </ul>
               </p>
             </div>
@@ -57,10 +57,10 @@
             <div>
                 <h3 class="mt-4 px-4 pb-1">Perfil Personal</h3>
                 <p class="px5">
-                    Bachiller en mantenimiento general  me especialice en electricidad doméstica. 
-                    por lo que mis estudios y mis 10 experiencia me hacen una persona capaz de solucionar problemas, aislar fallas, realizar instalaciones, mantenimiento, etc.
+                    Bachiller en mantenimiento general. Me especialice en electricidad doméstica, 
+                    por lo que mis estudios y mis 10 años de experiencia me hacen una persona capaz de solucionar problemas, aislar fallas, realizar instalaciones, mantenimiento, etc.
                     He trabajado en empresas como también freelance.
-                    puedo llevar una un proyecto de instalación eléctrica de principio a fin, pasando por todas sus etapas (cañería, cableado, diseño de iluminación, armado de cuadro eléctrico). 
+                    Puedo llevar un proyecto de instalación eléctrica de principio a fin, pasando por todas sus etapas (cañería, cableado, diseño de iluminación, armado de cuadro eléctrico). 
                 </p>
             </div>
 
@@ -74,13 +74,13 @@
                 <h3 class="mt-4 px-4 pb-1">Experiencia Laboral</h3>
                 <p class="px-4">
                     <ul>
-                        <li>FERNANDO CIBALLERO, Vicuña Mackenna, Cordoba, Argentina
-                            Ayudante electrico (11/2011)(02/2015)</li>
-                        <li>FERNANDO CIBALLERO, Vicuña Mackenna, Cordoba, Argentina
+                        <li>FERNANDO CIBALLERO, Vicuña Mackenna, Córdoba, Argentina
+                            Ayudante eléctrico (11/2011)(02/2015)</li>
+                        <li>FERNANDO CIBALLERO, Vicuña Mackenna, Córdoba, Argentina
                             Oficial electricista  (02/2015)         (09/2019)</li>                                            
-                        <li>DIAZ SERVICIOS ELÉCTRICOS, Vicuña Mackenna, Cordoba, Argentina	Date Started – Date Ended
+                        <li>DIAZ SERVICIOS ELÉCTRICOS (Carlos Diaz), Vicuña Mackenna, Córdoba, Argentina
                             Oficial electricista  (09/2015)         (Presente)</li>
-                        <li>FREE LANCE, Vicuña Mackenna, Cordoba, Argentina                                     Date Started – Date Ended
+                        <li>FREE LANCE, Vicuña Mackenna, Córdoba, Argentina                                     
                             Electricista          (2011)            (Presente)    </li>
                     
                      </ul>
@@ -100,14 +100,13 @@
                 <p class="px-4">
                     Instalar cableado y cables subterráneos.
                     Instalar, reemplazar y reparar controles eléctricos y cajas de paneles.
-                    Empalmar, unir y conectar cables
-                    Pruebe y mida el voltaje, las cargas, la integridad de fallas a tierra de los circuitos
-                    Instalar montaje en superficie y/o cables aéreos
-                    Supervisar a otros trabajadores
-                    Estimar costos y materiales
+                    Empalmar, unir y conectar cables.
+                    Probar y medir el voltaje, las cargas, la integridad de fallas a tierra de los circuitos.
+                    Instalar montaje en superficie y/o cables aéreos.
+                    Supervisar a otros trabajadores.
+                    Estimar costos y materiales.
                     Renovar los sistemas eléctricos en estructuras residenciales y comerciales.
                     Solucionar problemas y aislar fallas de circuitos.
-                    seguido
                     Leer planos y esquemas eléctricos.
                 </p>
             </div>
